--- a/src/Style.css
+++ b/src/Style.css
@@ -61,7 +61,9 @@ header ul li a:hover {
 
 input {
   width: 600px;
+  margin-bottom: 10px;
 }
+
 textarea {
   height: 10em;
   width: 600px;
@@ -95,6 +97,12 @@ textarea {
 #sixth {
   background-image: url(./images/budget.png);
   background-size: cover;
+}
+
+#send{
+  font-size: x-large;
+  font-weight: bold;
+  background-color: rgb(122, 39, 143);
 }
 
   /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
@@ -210,7 +218,11 @@ textarea {
       background-position-y: center;
     }
 
-  #contact-form {
-    width: 250px;
+  form input {
+    width: 350px;
+  }
+
+  form textarea {
+    width: 350px;
   }
 }
