updated portfolio to have foreex journal

--- a/src/Style.css
+++ b/src/Style.css
@@ -82,7 +82,7 @@ textarea {
 }
 
 #first {
-  background-image: url(./images/notetaker.png);
+  background-image: url(./images/FS.png);
   background-size: cover;
 }
 
