--- a/src/components/FriendCard/style.css
+++ b/src/components/FriendCard/style.css
@@ -1,5 +1,5 @@
 .card {
-  border-radius: 2px;
+  border-radius: 10px;
   height: 150px;
   margin: 5px;
   position: relative;
@@ -10,14 +10,20 @@
 }
 
 strong {
-  font-size: x-large;
+  font-size: 19px;
+  margin-right: 20px;
 }
 
 .content {
-  margin-right: 70px;
-  padding: 5px;
+  padding: 3px;
 }
 
 .content ul {
+  margin-right: 25px;
   margin-top: 8px;
+}
+
+.content a {
+  font-size: 17px;
+  margin-right: 20px;
 }
