--- a/src/Style.css
+++ b/src/Style.css
@@ -1,19 +1,31 @@
 html {
     background-image: url(./images/overallBackground.svg);
+    background-size: 100%;  
   }
 
-
-.pagetitle {
-  margin-bottom: 20px;
+.myphoto {
+  width: 60%;
+  margin-top: 10px;
+  margin-right: 20px;
 }
 
 .aboutcontent {
   margin-top: 20px;
-  font-size: x-large;
+  font-size: 20px;
+}
+
+.dlink {
+  margin-top: 8px;
+  margin-left: 35px;
+  margin-bottom: 12px;
+}
+
+#RESDL {
+    color: rgb(122, 39, 143);
 }
 
 .resumecontent {
-  margin-top: 20px;
+  margin-left: 35px;
 }
 
 .resumecontent li {
@@ -30,20 +42,27 @@ footer {
   justify-content: center;
 }
 
+.sociallink{
+  margin: 5px;
+}
+
 header h1 {
     margin-top: 60px;
     margin-left: 70px;
     color: rgba(209, 205, 205, 0.712);
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 header ul {
     margin-left: 330px;
     margin-top: 69px;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 a {
   color: black;
   font-size: x-large;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 a:hover {
@@ -62,10 +81,16 @@ header ul li a:hover {
 #content {
     background: url(./images/contentBackground.svg);
     text-align: center;
+    border-radius: 20px;
+    font-family: 'Roboto Condensed', sans-serif;
 }
  
 .nav .active {
     color: rgb(122, 39, 143);
+}
+
+#form {
+  margin-top: 10px;
 }
 
 input {
@@ -87,24 +112,8 @@ textarea {
   background-image: url(./images/sodxcalc.png);
   background-size: cover;
 }
-
-#third {
-  background-image: url(./images/techlinked.png);
-  background-size: cover;
-}
-
-#fourth {
-  background-image: url(./images/weather.png);
-  background-size: cover;
-}
-
 #fifth {
   background-image: url(./images/WDS.png);
-  background-size: cover;
-}
-
-#sixth {
-  background-image: url(./images/budget.png);
   background-size: cover;
 }
 
@@ -115,11 +124,15 @@ textarea {
 }
 
 /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
-@media screen and (max-width: 575px) {
+@media screen and (max-width: 430px) {
+
+  html {
+    background-size: 200%;  
+  }
 
   header h1 {
     margin-top: 20px;
-    margin-left: 63px;
+    margin-left: 100px;
   }
 
   header a {
@@ -127,8 +140,8 @@ textarea {
   }
 
   header ul {
-    margin-left: 0px;
-    margin-right: 10px;
+    margin-left: 25px;
+    margin-right: 36px;
     margin-top: 2px;
     justify-content: center;
   }
@@ -146,10 +159,6 @@ textarea {
     width: 100%;
   }
 
-  .work {
-    flex: 0 100%;
-  }
-
   .contact-info {
     text-align: center;
   }
@@ -159,22 +168,12 @@ textarea {
   }
 
   .myphoto {
-    width: 80%;
-    margin-left: 10%;
-    
-  }
-
-  #RESDL {
-    color: rgb(122, 39, 143);
-    
+    width: 60%;
+    margin-left: 20%;
   }
 
   footer {
     text-align: center;
-  }
-
-  .sociallink {
-    margin: 5px;
   }
 
   .card {
@@ -189,5 +188,28 @@ textarea {
 
   form textarea {
     width: 95%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+
+  header h1 {
+    margin-top: 20px;
+    margin-left: 83px;
+  }
+
+  header a {
+    margin-left: 10px;
+  }
+
+  header ul {
+    margin-left: 10px;
+    margin-right: 15px;
+    margin-top: 2px;
+    justify-content: center;
+  }
+
+  .resumecontent li {
+    margin-left: 50px;
   }
 }
