--- a/src/Style.css
+++ b/src/Style.css
@@ -15,6 +15,14 @@ html {
   font-size: 32px;
 }
 
+#badge {
+  width: 90%;
+}
+
+.badgelink {
+  margin-left: 42.5%;
+}
+
 .dlink {
   margin-top: 8px;
   margin-left: 35px;
@@ -156,6 +164,15 @@ form textarea {
     margin-right: 0%;
     margin-bottom: 0%;
     font-size: 20px;
+  }
+
+  #badge {
+    margin-top: 5px;
+    width: 250%;
+  }
+
+  .badgelink {
+    margin-left: 37%;
   }
 
   #content {
