--- a/src/Style.css
+++ b/src/Style.css
@@ -49,10 +49,13 @@ footer {
 
 #footerrow {
   justify-content: center;
+  margin-left: 7px;
 }
 
 .sociallink{
-  margin: 5px;
+  margin-top: 5px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 header h1 {
@@ -131,6 +134,182 @@ form textarea {
 }
 
 /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+@media screen and (max-width: 1250px) {
+  header h1 {
+    margin-top: 20px;
+  }
+
+  header a {
+    margin-left: 10px;
+  }
+
+  header ul {
+    margin-left: 110px;
+    margin-top: 25px;
+    justify-content: center;
+  }
+
+  .myphoto {
+    width: 60%;
+    margin-top: 10px;
+    margin-right: 10px;
+  }
+
+  .aboutcontent {
+    margin-left: 0%;
+    margin-right: 0%;
+    margin-bottom: 0%;
+    font-size: 30px;
+  }
+
+  #badge {
+    margin-top: 5px;
+    margin-left: 20px;
+    width: 150%;
+  }
+
+  .badgelink {
+    margin-left: 37%;
+  }
+
+  #content {
+   margin-top: 20px;
+   padding: 10px;
+  }
+
+  .section-title {
+    width: 95%;
+  }
+
+  .intro p {
+    width: 100%;
+  }
+
+  .contact-info {
+    text-align: center;
+  }
+
+  .contact-info > * {
+    flex: 0 100%;
+  }
+
+  .myphoto {
+    width: 40%;
+    margin-left: 30%;
+  }
+
+  footer {
+    text-align: center;
+  }
+
+  .card {
+    width: 97%;
+    background-position-x: center;
+    background-position-y: center;
+  }
+
+  .resumecontent li {
+    margin-left: 325px;
+  }
+
+  form input {
+    margin-top: 5px;
+  }
+
+  form textarea {
+    margin-top: 5px;
+  }
+}
+
+
+@media screen and (max-width: 900px) {
+  header h1 {
+    margin-top: 20px;
+    margin-left: 255px;
+  }
+
+  header a {
+    margin-left: 10px;
+  }
+
+  header ul {
+    margin-left: 110px;
+    margin-top: 2px;
+    justify-content: center;
+  }
+
+  .myphoto {
+    width: 60%;
+    margin-top: 10px;
+    margin-right: 10px;
+  }
+
+  .aboutcontent {
+    margin-left: 0%;
+    margin-right: 0%;
+    margin-bottom: 0%;
+    font-size: 30px;
+  }
+
+  #badge {
+    margin-top: 5px;
+    margin-left: 20px;
+    width: 150%;
+  }
+
+  .badgelink {
+    margin-left: 37%;
+  }
+
+  #content {
+   margin-top: 20px;
+   padding: 10px;
+  }
+
+  .section-title {
+    width: 95%;
+  }
+
+  .intro p {
+    width: 100%;
+  }
+
+  .contact-info {
+    text-align: center;
+  }
+
+  .contact-info > * {
+    flex: 0 100%;
+  }
+
+  .myphoto {
+    width: 40%;
+    margin-left: 30%;
+  }
+
+  footer {
+    text-align: center;
+  }
+
+  .card {
+    width: 97%;
+    background-position-x: center;
+    background-position-y: center;
+  }
+
+  .resumecontent li {
+    margin-left: 70px;
+  }
+
+  form input {
+    margin-top: 5px;
+  }
+
+  form textarea {
+    margin-top: 5px;
+  }
+}
+
 @media screen and (max-width: 430px) {
 
   html {
